--- a/static/css/terminal.css
+++ b/static/css/terminal.css
@@ -388,14 +388,14 @@ button {
 
 pre.asciiart {
   font-family: 'Fira Mono', 'Consolas', 'Menlo', monospace;
-  font-size: 1.1em;
+  font-size: 0.55em;
   line-height: 0.8;
   background: none;
   border: none;
   padding: 0;
-  margin: 0 auto;
+  margin: 0;
   display: block;
-  text-align: center;
+  text-align: left;
 }
 
 pre.asciiart span {
